syntax="proto3";

message Blank{}

message Category{
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest{
    string name = 1;
    string description = 2;
}

message CategoryResponse{
    Category category = 1;
}

message CategoryList{
    repeated Category categories = 1;
}

service CategoryService{
    rpc ListCategories(Blank) returns (CategoryList){}
    rpc CreateCategory(CreateCategoryRequest) returns (Category){}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList){}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category){}

}